--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -8283,22 +8283,36 @@ p, li { white-space: pre-wrap; }
              </layout>
             </item>
             <item row="0" column="1">
-             <layout class="QGridLayout" name="gridLayout_BrCv_11" rowstretch="4,1,1,1,1" columnstretch="1,1,1,1">
+             <layout class="QGridLayout" name="gridLayout_BrCv_11" rowstretch="4,1,1,1,1,1,1" columnstretch="1,1,1,1">
               <property name="sizeConstraint">
                <enum>QLayout::SetMinimumSize</enum>
               </property>
-              <item row="4" column="0">
-               <spacer name="verticalSpacer_BrCv_3">
-                <property name="orientation">
-                 <enum>Qt::Vertical</enum>
+              <item row="1" column="1">
+               <widget class="QComboBox" name="plotXAxis_BrCv">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
                 </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>20</width>
-                  <height>40</height>
-                 </size>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLineEdit" name="lineEdit_BrCv_15">
+                <property name="enabled">
+                 <bool>false</bool>
                 </property>
-               </spacer>
+                <property name="text">
+                 <string>Y - Axis</string>
+                </property>
+               </widget>
+              </item>
+              <item row="5" column="0">
+               <widget class="QPushButton" name="plotView_BrCv">
+                <property name="text">
+                 <string>Plot</string>
+                </property>
+               </widget>
               </item>
               <item row="0" column="0" colspan="4">
                <widget class="QWidget" name="plotAxView_BrCv" native="true"/>
@@ -8319,30 +8333,13 @@ p, li { white-space: pre-wrap; }
                 </property>
                </widget>
               </item>
-              <item row="1" column="1">
-               <widget class="QComboBox" name="plotXAxis_BrCv">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-               </widget>
-              </item>
               <item row="3" column="0">
-               <widget class="QPushButton" name="plotView_BrCv">
-                <property name="text">
-                 <string>Plot</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="0">
-               <widget class="QLineEdit" name="lineEdit_BrCv_15">
+               <widget class="QLineEdit" name="lineEdit_82">
                 <property name="enabled">
                  <bool>false</bool>
                 </property>
                 <property name="text">
-                 <string>Y - Axis</string>
+                 <string>Title</string>
                 </property>
                </widget>
               </item>
@@ -8355,6 +8352,29 @@ p, li { white-space: pre-wrap; }
                  </sizepolicy>
                 </property>
                </widget>
+              </item>
+              <item row="6" column="0">
+               <spacer name="verticalSpacer_BrCv_3">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>20</width>
+                  <height>40</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="4" column="0">
+               <widget class="QCheckBox" name="plotPeaks_BrCv">
+                <property name="text">
+                 <string>Plot peaks</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="1">
+               <widget class="QLineEdit" name="plotTitle_BrCv"/>
               </item>
              </layout>
             </item>
@@ -8562,8 +8582,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>172</width>
-             <height>127</height>
+             <width>222</width>
+             <height>130</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8704,8 +8724,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>141</width>
-             <height>97</height>
+             <width>165</width>
+             <height>99</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8771,8 +8791,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>174</width>
-             <height>135</height>
+             <width>206</width>
+             <height>147</height>
             </rect>
            </property>
            <attribute name="label">
